--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -9,175 +9,7 @@
 <html>
 <head>
 	<title>Game Engine</title>
-	<style type="text/css">
-		body {
-			margin: 0;
-			padding: 0;
-			font-family: Arial, sans-serif;
-			background: #000;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			min-height: 100vh;
-		}
-
-		#gameContainer {
-			position: relative;
-		}
-
-		canvas {
-			border: 1px solid black;
-			display: block;
-		}
-
-		#menuOverlay {
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 800px;
-			height: 600px;
-			background: rgba(0, 0, 0, 0.5);
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			z-index: 10;
-		}
-
-		#menuOverlay.hidden {
-			display: none;
-		}
-
-		.menu-title {
-			color: #fff;
-			font-size: 48px;
-			font-weight: bold;
-			margin-bottom: 60px;
-			text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-		}
-
-		.menu-buttons {
-			display: flex;
-			flex-direction: column;
-			gap: 20px;
-		}
-
-		.menu-button {
-			background: linear-gradient(180deg, #4a4a4a 0%, #2a2a2a 100%);
-			border: 2px solid #666;
-			color: #fff;
-			padding: 15px 60px;
-			font-size: 24px;
-			cursor: pointer;
-			transition: all 0.3s ease;
-			text-transform: uppercase;
-			letter-spacing: 2px;
-			box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
-		}
-
-		.menu-button:hover {
-			background: linear-gradient(180deg, #5a5a5a 0%, #3a3a3a 100%);
-			border-color: #888;
-			transform: translateY(-2px);
-			box-shadow: 0 6px 12px rgba(0, 0, 0, 0.7);
-		}
-
-		.menu-button:active {
-			transform: translateY(0);
-			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-		}
-
-		.menu-instructions {
-			position: absolute;
-			bottom: 40px;
-			color: #999;
-			font-size: 14px;
-			text-align: center;
-		}
-
-		.menu-slider-container {
-			width: 400px;
-			padding: 10px 20px;
-			margin: 0;
-		}
-
-		.menu-slider-label {
-			display: block;
-			color: #fff;
-			font-size: 18px;
-			margin-bottom: 10px;
-			text-transform: uppercase;
-			letter-spacing: 1px;
-		}
-
-		.menu-slider-wrapper {
-			display: flex;
-			align-items: center;
-			gap: 15px;
-		}
-
-		.menu-slider {
-			flex: 1;
-			height: 6px;
-			-webkit-appearance: none;
-			appearance: none;
-			background: #444;
-			outline: none;
-			border-radius: 3px;
-		}
-
-		.menu-slider::-webkit-slider-thumb {
-			-webkit-appearance: none;
-			appearance: none;
-			width: 20px;
-			height: 20px;
-			background: #fff;
-			cursor: pointer;
-			border-radius: 50%;
-			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-		}
-
-		.menu-slider::-moz-range-thumb {
-			width: 20px;
-			height: 20px;
-			background: #fff;
-			cursor: pointer;
-			border-radius: 50%;
-			border: none;
-			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-		}
-
-		.menu-slider-value {
-			color: #fff;
-			font-size: 18px;
-			min-width: 50px;
-			text-align: right;
-		}
-
-		.menu-checkbox-container {
-			display: flex;
-			align-items: center;
-			gap: 15px;
-			padding: 10px 20px;
-			margin: 0;
-			cursor: pointer;
-		}
-
-		.menu-checkbox {
-			width: 24px;
-			height: 24px;
-			cursor: pointer;
-			accent-color: #fff;
-		}
-
-		.menu-checkbox-label {
-			color: #fff;
-			font-size: 18px;
-			cursor: pointer;
-			text-transform: uppercase;
-			letter-spacing: 1px;
-		}
-	</style>
+	<link id="css" rel="stylesheet" href="css.css"/ >
 	<script type="text/javascript" src="GPTEngine.js"></script>
 	<script type="text/javascript" src="Vector2D.js"></script>
     <script type="text/javascript" src="GameEntity.js"></script>
