vibe: high score on quit (score>0)

--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -370,7 +370,13 @@
 					{
 						type: 'button',
 						label: 'Quit',
-						action: () => returnToMenu()
+						action: () => {
+							if (score > 0) {
+								gameOver();
+							} else {
+								returnToMenu();
+							}
+						}
 					}
 				],
 				instructions: ''
