--- a/JS game engine/skeleton.html
+++ b/JS game engine/skeleton.html
@@ -8,6 +8,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Game Engine</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link id="css" rel="stylesheet" href="css.css"/ >
